# Photofission-Event

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chSettings.json  main.cpp  reader.cpp  settings.json
include/: TChSettings.hpp  TEventBuilder.hpp  TEventData.hpp  TFileWriter.hpp
macro/: gen_no_timeoffset.cpp  reader.cpp  time_alignment.cpp  time_alignment_Si.cpp  time_alignment_gamma.cpp
src/: TEventBuilder.cpp  TFileWriter.cpp
